--- a/x1_site/index.html
+++ b/x1_site/index.html
@@ -50,7 +50,7 @@
                     class="header-graphic-icon is-1"
                   />
                   <div class="text-style-tag">
-                    Hi there, My name is Jane Cooper<br />
+                    Hi there, My name is <span>Jane Cooper</span><br />
                   </div>
                   <div class="margin-bottom margin-xmedium">
                     <h1>
